pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vault-secrets-pod
spec:
  containers:
  - name: my-container
    image: my-app-image
    volumeMounts:
      - name: vault-secrets-store
        mountPath: /mnt/secrets
        readOnly: true
  volumes:
  - name: vault-secrets-store
    csi:
      driver: secrets-store.csi.k8s.io
      volumeHandle: vault-secrets-store
      readOnly: true
      volumeAttributes:
        secretProviderClass: "vault-secrets"  # SecretProviderClass referencing the Vault secrets
